[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyemvue"
dynamic = ["version"]
authors = [
  { name="magico13", email="magico1313@gmail.com" },
]
description = "Unofficial library for interacting with the Emporia Vue energy monitor."
readme = "readme.md"
requires-python = ">=3.9"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
dependencies = [
    "pycognito>=2024.2.0",
    "python-dateutil>=2.8.2",
    "requests>=2.26.0",
    "typing_extensions>=4.0.1"
]

[project.urls]
Homepage = "https://github.com/magico13/PyEmVue"
Issues = "https://github.com/magico13/PyEmVue/issues"

[tool.hatch.version]
path = "pyemvue/__version__.py"